lista modalidades funcionando corretamente

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -152,8 +152,8 @@
               <img src="img/mod-1.jpg" class="img-fluid" alt="">
               <div class="mod-info">
                 <div class="mod-info-content">
-                  <h4><%=modalidades[modalidade].nome%></h4>
-                  <span><%=modalidades[modalidade].genero%></span>
+                  <h4><%=modalidades[modalidade].Nome%></h4>
+                  <span><%=modalidades[modalidade].Genero%></span>
                   <div class="social">
                     <a href=""><i class="ion ion-eye"></i></a>
                   </div>
