--- a/views/cria_modalidade.html
+++ b/views/cria_modalidade.html
@@ -109,6 +109,8 @@
           <li><a href="#intro">Página Inicial</a></li>
           <li class="menu-active"><a href="#modalidade">Modalidades</a></li>
           <li><a href="#jogo">Jogos</a></li>
+          <li><a href="#atleta">Atletas</a></li>
+          <li><a href="#tecnico">Técnicos</a></li>
           <li><a href="#contato">Contato</a></li>
         </ul>
       </nav><!-- #nav-menu-container -->
