--- a/views/index.ejs
+++ b/views/index.ejs
@@ -202,7 +202,7 @@
               <div class="jogo-info">
                 <h4><a href="#"><%=jogo[i].Nome_Mod%> <%=jogo[i].Genero_Mod%></a></h4>
                 <h4>INSPER vs <%=jogo[i].Adversario%></h4>
-                <p>15/09 - Sábado</p>
+                <p><%=jogo[i].Horario%></p>
               </div>
             </div>
           </div>
