--- a/views/modalidade.ejs
+++ b/views/modalidade.ejs
@@ -1,97 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <title>Atlética Insper</title>
+  <meta  http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta content="" name="keywords">
   <meta content="" name="description">
 
+  <title>Atlética Insper</title>
+
   <!-- Favicons -->
-  <link href="img/Logo.png" rel="icon">
-  <link href="img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="/img/Logo.png" rel="icon">
+  <link href="/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Montserrat:300,400,500,700" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Anton" rel="stylesheet">
 
   <!-- Bootstrap CSS File -->
-  <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
   <!-- Libraries CSS Files -->
-  <link href="lib/font-awesome/css/font-awesome.min.css" rel="stylesheet">
-  <link href="lib/animate/animate.min.css" rel="stylesheet">
-  <link href="lib/ionicons/css/ionicons.min.css" rel="stylesheet">
-  <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
-  <link href="lib/lightbox/css/lightbox.min.css" rel="stylesheet">
+  <link href="/lib/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+  <link href="/lib/animate/animate.min.css" rel="stylesheet">
+  <link href="/lib/ionicons/css/ionicons.min.css" rel="stylesheet">
+  <link href="/lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
+  <link href="/lib/lightbox/css/lightbox.min.css" rel="stylesheet">
 
   <!-- Main Stylesheet File -->
-  <link href="css/style.css" rel="stylesheet">
+  <link href="/css/style.css" rel="stylesheet">
 </head>
 
 <body>
-
-<!--==========================
-    Intro Section
-  ============================-->
-  <section id="intro">
-    <div class="intro-container">
-      <div id="introCarousel" class="carousel  slide carousel-fade" data-ride="carousel">
-
-        <ol class="carousel-indicators"></ol>
-
-        <div class="carousel-inner" role="listbox">
-
-          <div class="carousel-item active">
-            <div class="carousel-background"><img src="img/intro-carousel/1.jpg" alt=""></div>
-            <div class="carousel-container">
-              <div class="carousel-content">
-                <!--
-                <h2>Atlética Insper</h2>
-                <p>Logo</p> -->
-                <img src="img/Logo.png" alt="" width="20%" height="20%">
-                </div>
-            </div>
-          </div>
-
-          <div class="carousel-item">
-            <div class="carousel-background"><img src="img/intro-carousel/2.jpg" alt=""></div>
-            <div class="carousel-container">
-              <div class="carousel-content">
-                <!--
-                <h2>Atlética Insper</h2>
-                <p>Logo</p> -->
-                <img src="img/Logo.png" alt="" width="20%" height="20%">
-            </div>
-          </div>
-          </div>
-
-          <div class="carousel-item">
-            <div class="carousel-background"><img src="img/intro-carousel/3.jpg" alt=""></div>
-            <div class="carousel-container">
-              <div class="carousel-content">
-                <!--
-                <h2>Atlética Insper</h2>
-                <p>Logo</p> -->
-                <img src="img/Logo.png" alt="" width="20%" height="20%">
-            </div>
-          </div>
-
-        </div>
-
-        <a class="carousel-control-prev" href="#introCarousel" role="button" data-slide="prev">
-          <span class="carousel-control-prev-icon ion-chevron-left" aria-hidden="true"></span>
-          <span class="sr-only">Anterior</span>
-        </a>
-
-        <a class="carousel-control-next" href="#introCarousel" role="button" data-slide="next">
-          <span class="carousel-control-next-icon ion-chevron-right" aria-hidden="true"></span>
-          <span class="sr-only">Próxima</span>
-        </a>
-
-      </div>
-    </div>
-  </section><!-- #intro -->
   <!--==========================
     Header
   ============================-->
@@ -120,13 +59,75 @@
 
   <main id="main">
 
+  <!--==========================
+    Intro Section
+  ============================-->
+  <section id="intro">
+    <div class="intro-container">
+      <div id="introCarousel" class="carousel  slide carousel-fade" data-ride="carousel">
+
+        <ol class="carousel-indicators"></ol>
+
+        <div class="carousel-inner" role="listbox">
+
+          <div class="carousel-item active">
+            <div class="carousel-background"><img src="/img/intro-carousel/1.jpg" alt=""></div>
+            <div class="carousel-container">
+              <div class="carousel-content">
+                <!--
+                <h2>Atlética Insper</h2>
+                <p>Logo</p> -->
+                <img src="/img/Logo.png" alt="" width="20%" height="20%">
+                </div>
+            </div>
+          </div>
+
+          <div class="carousel-item">
+            <div class="carousel-background"><img src="/img/intro-carousel/2.jpg" alt=""></div>
+            <div class="carousel-container">
+              <div class="carousel-content">
+                <!--
+                <h2>Atlética Insper</h2>
+                <p>Logo</p> -->
+                <img src="/img/Logo.png" alt="" width="20%" height="20%">
+            </div>
+          </div>
+          </div>
+
+          <div class="carousel-item">
+            <div class="carousel-background"><img src="/img/intro-carousel/3.jpg" alt=""></div>
+            <div class="carousel-container">
+              <div class="carousel-content">
+                <!--
+                <h2>Atlética Insper</h2>
+                <p>Logo</p> -->
+                <img src="/img/Logo.png" alt="" width="20%" height="20%">
+            </div>
+          </div>
+
+        </div>
+
+        <a class="carousel-control-prev" href="#introCarousel" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon ion-chevron-left" aria-hidden="true"></span>
+          <span class="sr-only">Anterior</span>
+        </a>
+
+        <a class="carousel-control-next" href="#introCarousel" role="button" data-slide="next">
+          <span class="carousel-control-next-icon ion-chevron-right" aria-hidden="true"></span>
+          <span class="sr-only">Próxima</span>
+        </a>
+
+      </div>
+    </div>
+  </section><!-- #intro -->
+
     <!--==========================
       Modalidades
     ============================-->
     <section id="modalidade">
       <div class="container">
         <div class="section-header wow fadeInUp">
-          <h3>Handebol Feminino</h3>
+          <h3><%=modalidade[0].Nome%></h3>
           <p>Informações Gerais</p>
         </div>
 
@@ -134,7 +135,7 @@
         <!-- AQUI VAI TER QUE FAZER UM FOR PELAS MODALIDADES -->
           <div class="col-lg-4 col-md-8 wow">
             <div class="mod">
-              <img src="img/mod-1.jpg" class="img-fluid" alt="">
+              <img src="/img/mod-1.jpg" class="img-fluid" alt="">
             </div>
           </div>
 
@@ -142,6 +143,8 @@
             <div>
               <h4>Treinos:</h4>
               <p>Terça: 21h</p>
+              <h4>Caixinha:</h4>
+              <p><%=modalidade[0].Caixinha%> reais</p>
               <center><button align="center" id="cria_treino" href="novo_treino" type="submit">Novo Treino</button></center><br>
             </div>
           </div>
@@ -150,7 +153,7 @@
             <div>
               <h4>Técnico:</h4>
               <p>Nome do técnico</p>
-              <center><button align="center" id="cria_treino" href="novo_treino" type="submit">Novo Treino</button></center><br>
+              <center><button align="center" id="cria_treino" href="novo_treino" type="submit">Adicionar Técnico</button></center><br>
             </div>
           </div>
         </div>
@@ -171,7 +174,7 @@
         <!-- AQUI VAI TER QUE FAZER UM FOR PELAS MODALIDADES -->
           <div class="col-lg-2 col-md-6 wow fadeInUp">
             <div class="mod">
-              <img src="img/mod-1.jpg" class="img-fluid" alt="">
+              <img src="/img/mod-1.jpg" class="img-fluid" alt="">
               <div class="mod-info">
                 <div class="mod-info-content">
                   <h4>Nome do Atleta</h4>
@@ -183,7 +186,7 @@
 
           <div class="col-lg-2 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
             <div class="mod">
-              <img src="img/mod-2.jpg" class="img-fluid" alt="">
+              <img src="/img/mod-2.jpg" class="img-fluid" alt="">
               <div class="mod-info">
                 <div class="mod-info-content">
                   <h4>Handebol</h4>
@@ -195,7 +198,7 @@
 
           <div class="col-lg-2 col-md-6 wow fadeInUp" data-wow-delay="0.2s">
             <div class="mod">
-              <img src="img/mod-3.jpg" class="img-fluid" alt="">
+              <img src="/img/mod-3.jpg" class="img-fluid" alt="">
               <div class="mod-info">
                 <div class="mod-info-content">
                   <h4>Futsal</h4>
@@ -207,7 +210,7 @@
 
           <div class="col-lg-2 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
             <div class="mod">
-              <img src="img/mod-4.jpg" class="img-fluid" alt="">
+              <img src="/img/mod-4.jpg" class="img-fluid" alt="">
               <div class="mod-info">
                 <div class="mod-info-content">
                   <h4>Voleibol</h4>
@@ -233,7 +236,7 @@
 
           <div class="col-lg-3 col-md-6 footer-info">
             <h3>Atlética Insper</h3>
-            <img src="img/Logo.png" alt="" width="40%" height="40%">
+            <img src="/img/Logo.png" alt="" width="40%" height="40%">
           </div>
 
           <div class="col-lg-3 col-md-6 footer-info">
@@ -271,24 +274,24 @@
   <a href="#" class="back-to-top"><i class="fa fa-chevron-up"></i></a>
 
   <!-- JavaScript Libraries -->
-  <script src="lib/jquery/jquery.min.js"></script>
-  <script src="lib/jquery/jquery-migrate.min.js"></script>
-  <script src="lib/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="lib/easing/easing.min.js"></script>
-  <script src="lib/superfish/hoverIntent.js"></script>
-  <script src="lib/superfish/superfish.min.js"></script>
-  <script src="lib/wow/wow.min.js"></script>
-  <script src="lib/waypoints/waypoints.min.js"></script>
-  <script src="lib/counterup/counterup.min.js"></script>
-  <script src="lib/owlcarousel/owl.carousel.min.js"></script>
-  <script src="lib/isotope/isotope.pkgd.min.js"></script>
-  <script src="lib/lightbox/js/lightbox.min.js"></script>
-  <script src="lib/touchSwipe/jquery.touchSwipe.min.js"></script>
+  <script src="/lib/jquery/jquery.min.js"></script>
+  <script src="/lib/jquery/jquery-migrate.min.js"></script>
+  <script src="/lib/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="/lib/easing/easing.min.js"></script>
+  <script src="/lib/superfish/hoverIntent.js"></script>
+  <script src="/lib/superfish/superfish.min.js"></script>
+  <script src="/lib/wow/wow.min.js"></script>
+  <script src="/lib/waypoints/waypoints.min.js"></script>
+  <script src="/lib/counterup/counterup.min.js"></script>
+  <script src="/lib/owlcarousel/owl.carousel.min.js"></script>
+  <script src="/lib/isotope/isotope.pkgd.min.js"></script>
+  <script src="/lib/lightbox/js/lightbox.min.js"></script>
+  <script src="/lib/touchSwipe/jquery.touchSwipe.min.js"></script>
   <!-- Contact Form JavaScript File -->
-  <script src="contactform/contactform.js"></script>
+  <script src="/contactform/contactform.js"></script>
 
   <!-- Template Main Javascript File -->
-  <script src="js/main.js"></script>
+  <script src="/js/main.js"></script>
 
 </body>
 </html>
