--- a/views/cria_modalidade.html
+++ b/views/cria_modalidade.html
@@ -134,19 +134,9 @@
           <div class="form-group" align="center" class="input-group input-group-lg">
             <label class="control-label col-sm-2" for="nome">Nome:</label>
             <div class="col-sm-10">
-              <input type="text" class="form-control" placeholder="Nome da modalidade" name="nome">
+              <input type="text" class="form-control" placeholder="Nome da modalidade. Ex: Futsal Feminino" name="nome">
             </div>
           </div>
-    
-        <div class="form-group" align="center" class="input-group input-group-lg">
-          <label class="control-label col-sm-2" for="genero">Gênero:</label>
-          <div class="col-sm-10">          
-            <select type="select" class="form-control" name="genero">
-              <option value="F">Feminino</option>
-              <option value="M">Masculino</option>
-            </select>
-          </div>
-        </div>
      
         <div class="form-group" align="center" class="input-group input-group-lg">
           <label class="control-label col-sm-2" for="caixinha">Caixinha:</label>
