--- a/views/index.ejs
+++ b/views/index.ejs
@@ -57,6 +57,7 @@
           <li><a href="#modalidade">Modalidades</a>
           </li>
           <li><a href="#jogo">Jogos</a></li>
+          <li><a href="#treino">Treinos</a></li>
           <li><a href="#atleta">Atletas</a></li>
           <li><a href="#tecnico">Técnicos</a></li>
           <li><a href="#contato">Contato</a></li>
@@ -223,6 +224,26 @@
             };
           </script>
         </section><!-- #jogo -->
+
+        <!--==========================
+      Treinos
+    ============================-->
+    <section id="treino">
+      <div class="container">
+        <div class="section-header wow fadeInUp">
+          <h3>Treinos</h3>
+          <p>das modalidades</p>
+          <center><button align="center" id="cria_treino" href="novo_treino" type="submit">Novo Treino</button></center>
+          <script type="text/javascript">
+            document.getElementById("cria_treino").onclick = function () {
+              location.href = "novo_treino";
+            };
+          </script>
+        </div>
+      </div>
+      <br>
+      <br>
+    </section><!-- #atletas -->
 
         <!--==========================
       Atletas
