--- a/views/cria_lugar.html
+++ b/views/cria_lugar.html
@@ -47,6 +47,7 @@
           <li><a href="#intro">Página Inicial</a></li>
           <li><a href="#modalidade">Modalidades</a></li>
           <li class="menu-active"><a href="#jogo">Jogos</a></li>
+          <li><a href="#treino">Treinos</a></li>
           <li><a href="#atleta">Atletas</a></li>
           <li><a href="#tecnico">Técnicos</a></li>
           <li><a href="#contato">Contato</a></li>
